2008-11-08  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/37597
        * gfortran.dg/host_assoc_call_5.f90: New test.

2008-11-08  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/35820
	* gfortran.dg/nested_forall_1.f: New test.

2008-11-08  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/37445
        * gfortran.dg/host_assoc_call_3.f90: New test.
        * gfortran.dg/host_assoc_call_4.f90: New test.
        * gfortran.dg/host_assoc_function_4.f90: New test.

2008-11-06  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-09-13  Raksit Ashok <raksit@google.com>

	PR rtl-optimization/37489
	* g++.dg/opt/cse3.C: New testcase.
	* gcc.dg/c-torture/pr37969.c: New testcase.

2008-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR c/37924
	* gcc.c-torture/execute/pr37924.c: New test.

	PR tree-optimization/37879
	* gcc.dg/pr37879.c: New test.

	PR middle-end/37858
	* gcc.dg/pr37858.c: New test.

	PR middle-end/37870
	* gcc.target/i386/pr37870.c: New test.

2008-11-05  Hans-Peter Nilsson  <hp@axis.com>

	PR target/38016
	* gcc.c-torture/execute/ieee/pr38016.c,
	gcc.c-torture/execute/ieee/pr38016.c: New test.

2008-11-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/array5.adb New test.

2008-11-01  Hans-Peter Nilsson  <hp@axis.com>

	PR target/37939
	* gcc.target/cris/biap.c: New test.

2008-11-01  Mikael Morin  <mikael.morin@tele2.fr>

        PR fortran/37903
        * gfortran.dg/vector_subscript_4.f90: New test.

2008-11-01  Mikael Morin  <mikael.morin@tele2.fr>

        PR fortran/37749
        * gfortran.dg/vector_subscript__5.f90: New test.

2008-10-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org

	PR libfortran/37707
	* gfortran.dg/namelist_18.f90: Revise.
	* gfortran.dg/namelist_55.f90: New test.
	* gfortran.dg/namelist_56.f90: New test.

2008-10-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37882
	* gcc.c-torture/execute/pr37882.c: New test.

2008-10-21  Richard Guenther  <rguenther@suse.de>
